// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    5
     
    expenses
     totaling 
    $2,671,828.76
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $0.10
  </p>
</div>
`;
